--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version> <!-- Use a compatible version for Spring Boot 4.0.0 -->
+		</dependency>
 	</dependencies>
 
 	<build>
