--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- For Java 17+ -->
+		<dependency>
+			<groupId>com.bucket4j</groupId>
+			<artifactId>bucket4j_jdk17-core</artifactId>
+			<version>8.15.0</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
