--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/taskdb
+#spring.datasource.url=jdbc:postgresql://localhost:5432/taskdb
+spring.datasource.url=jdbc:postgresql://db:5432/taskdb
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 
